[package]
name = "otlp-ch-forwarder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws_lambda_events = { workspace = true, features = ["kinesis", "cloudwatch_logs"] }
lambda-otel-lite = { workspace = true }
lambda_runtime = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
otlp-sigv4-client = { workspace = true }
otlp-stdout-logs-processor = { workspace = true }
otlp-stdout-span-exporter = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
opentelemetry-proto = { workspace = true }
prost = { workspace = true }
