[package]
name = "otlp-stdout-logs-processor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-secretsmanager = { workspace = true, features = ["behavior-version-latest"] }
aws_lambda_events = { workspace = true, features = ["cloudwatch_logs", "kinesis"] }
base64 = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
lambda-otel-lite = { workspace = true }
lambda_runtime = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-proto  = { workspace = true }
opentelemetry_sdk = { workspace = true }
otlp-sigv4-client = { workspace = true }
otlp-stdout-span-exporter = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }
